# popkit-ai

./: .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  AMBIGUITY-BENCHMARK-SUMMARY.md  AUDIT-README.md  AUDIT-SUMMARY.txt  AUDIT-VERIFICATION-NOTES.md  CHANGELOG.md  CLAUDE.md  CLOUD-STATUS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  ISSUES-CLEANUP-ACTION-PLAN.md  LICENSE  PARALLEL_WORK_SEGMENTATION.md  PHASE1_COMPLETE.md  PHASE2-HOOK-MODERNIZATION-COMPLETE.md  PHASE3-WILDCARD-PERMISSIONS-COMPLETE.md  PHASE6_SUMMARY.md  PLATFORM_ROADMAP.md  QUICK-REFERENCE.md  README.md  RESEARCH_ONBOARDING_DEPLOYMENT.md  RESTART-GUIDE.md  SECURITY.md  STATUS.json  UPSTASH_EXPLORATION.md  cleanup-plugins.ps1  codebase-health-report.md  commit_message.txt  create-labels.sh  eslint.config.mjs  fix-command-refs.py  github-issues-audit.md  issue_38_body.md  (+11 more)
.claude-plugin/: marketplace.json  plugin.json
.cursor/: mcp.json
.github/: BRANCH_PROTECTION_SETUP.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.workspace/: MORNING-ROUTINE-COMPLETION-SUMMARY.md  NIGHTLY-ROUTINE-BASELINE-ANALYSIS.md  NIGHTLY-ROUTINE-COMPLETION-SUMMARY.md  NIGHTLY-ROUTINE-VALIDATION-REPORT.md  ROUTINE_MEASUREMENT_TESTING_GUIDE.md  ROUTINE_OPTIMIZATION_GUIDE.md  SESSION_SUMMARY_2025-12-19_context-measurement.md  WORKFLOW_AUDIT_FINDINGS.md
agents/: config.json
cloud-api/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
commands/: bug.md  chain-viz.md  ci.md  debug.md  design.md  dev.md  feature-dev.md  git.md  init-project.md  issue.md  issues.md  knowledge.md  morning.md  next.md  nightly.md  plan.md  plugin.md  popkit-release.md  power-init.md  power-mode.md  power.md  privacy.md  project.md  prune-branches.md  routine.md  routing-debug.md  sync.md  work.md  workflow-viz.md  worktree.md
docs/: AGENT_ROUTING_GUIDE.md  API_CONTRACT.md  AUTOCLAUIDE_ANALYSIS.md  CLOUDFLARE_PAGES_SETUP.md  COMPLEXITY-ANALYZER-SUMMARY.md  HOOK_PORTABILITY_AUDIT.md  INSTALLATION_FIX.md  ISSUE_LABELS.md  ISSUE_MIGRATION_ANALYSIS.md  MCP_WILDCARD_PERMISSIONS.md  MIGRATION_QUICKSTART.md  MODEL_CAPABILITIES.md  NOTIFICATION-FORMATTER-SUMMARY.md  POPKIT_DEVELOPMENT_WORKFLOW.md  POPKIT_DOCS_UX_ANALYSIS.md  POWER_MODE_ASYNC.md  PROGRAMMATIC_ASK_USER_QUESTION.md  PUBLIC_REPO_SETUP.md  README.md  ROADMAP.md  SKILL_MULTI_MODEL.md  TESTING_MODULAR_ARCHITECTURE.md  VISION.md  (+9 more)
(+378 files in other folders)
